# TANGO_BENCHMARKING

./: README.md
BENCHMARKING_SCRIPTS/PARASAIL/: README.md  multithreaded_aa.cpp
BENCHMARKING_SCRIPTS/SCRIPTS/: README.txt  test_all_gpu_libraries.slurm.sh  test_all_parasail_aa.slurm.sh  test_all_parasail_dna.slurm.sh  test_all_seqan3_aa_slurm.sh  test_all_seqan3_dna_slurm.sh  test_all_ssw_aa.slurm.sh  test_all_ssw_dna.slurm.sh
BENCHMARKING_SCRIPTS/SRC/PARASAIL/: README.md  multithreaded_dna.cpp
BENCHMARKING_SCRIPTS/SRC/SEQAN3/tutorial/source/: CMakeLists.txt  seqan_aa_align_multithread.cpp  seqan_dna_align_multithread.cpp
BENCHMARKING_SCRIPTS/SRC/SSW/: Makefile  example_aa.cpp  example_dna.cpp
